--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ env_logger = "0.11.7"
 egui = "0.31"
 eframe = "0.31"
 home = "0.5.11"
+humansize = "2.1.3"
 rand = "0.9.0"
 treemap = "0.3.2"
 log = "0.4.26"
