--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 env_logger = "0.11.7"
 egui = "0.31"
+egui_extras = { version = "0.31.1", features = ["svg"] }
 eframe = "0.31"
 home = "0.5.11"
 humansize = "2.1.3"
