--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ treemap = "0.3.2"
 log = "0.4.26"
 rayon = "1.10.0"
 egui_solarized = { path = "../egui-solarized" }
+sysinfo = "0.34.1"
+rfd = "0.15.3"
