--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ humansize = "2.1.3"
 treemap = "0.3.2"
 log = "0.4.26"
 rayon = "1.10.0"
+open = "5.3.0" # Added for opening files/directories
 egui_solarized = { path = "../egui-solarized" }
 sysinfo = "0.34.1"
 rfd = "0.15.3"
 unicode-normalization = "0.1.24"
+opener = { version = "0.7.2", features = ["reveal"] }
