--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 env_logger = "0.11.7"
 egui = "0.31"
 egui_extras = { version = "0.31.1", features = ["svg"] }
-eframe = "0.31"
+eframe = "0.31.1"
 home = "0.5.11"
 humansize = "2.1.3"
 treemap = "0.3.2"
@@ -19,3 +19,5 @@ sysinfo = "0.34.1"
 rfd = "0.15.3"
 unicode-normalization = "0.1.24"
 opener = { version = "0.7.2", features = ["reveal"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
