--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ unicode-normalization = "0.1.24"
 opener = { version = "0.7.2", features = ["reveal"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+indexmap = "2.9.0"
