better error handling on channels

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.1"
 edition = "2024"
 
 [dependencies]
-env_logger = "0.11.7"
+thiserror = "2.0"
+env_logger = "0.11"
 egui = "0.31"
 egui_extras = { version = "0.31.1", features = ["svg"] }
 eframe = "0.31.1"
