--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "disk-mosaic"
 version = "0.1.1"
 edition = "2024"
+build = "build.rs"
 
 [dependencies]
 thiserror = "2.0"
@@ -22,3 +23,6 @@ unicode-normalization = "0.1.24"
 opener = { version = "0.7.2", features = ["reveal"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[target.'cfg(windows)'.build-dependencies]
+winres = "0.1"
