--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,26 +3,27 @@ name = "disk-mosaic"
 version = "0.1.1"
 edition = "2024"
 build = "build.rs"
+license = "MIT"
+license-file = "LICENCE"
 
 [dependencies]
-thiserror = "2.0"
-env_logger = "0.11"
 egui = "0.31"
 egui_extras = { version = "0.31.1", features = ["svg"] }
 eframe = "0.31.1"
+env_logger = "0.11"
 home = "0.5.11"
 humansize = "2.1.3"
-treemap = "0.3.2"
 log = "0.4"
-rayon = "1.10.0"
-open = "5.3.2" # Added for opening files/directories
 egui_solarized = "0.2.0"
-sysinfo = "0.34.2"
-rfd = "0.15.3"
-unicode-normalization = "0.1.24"
 opener = { version = "0.7.2", features = ["reveal"] }
+rayon = "1.10.0"
+rfd = "0.15.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sysinfo = "0.34.2"
+thiserror = "2.0"
+treemap = "0.3.2"
+unicode-normalization = "0.1.24"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
