--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.1"
 edition = "2024"
 build = "build.rs"
 license = "MIT"
-license-file = "LICENCE"
 
 [dependencies]
 egui = "0.31"
@@ -20,6 +19,8 @@ rayon = "1.10.0"
 rfd = "0.15.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+strum = "0.27.1"
+strum_macros = "0.27.1"
 sysinfo = "0.34.2"
 thiserror = "2.0"
 treemap = "0.3.2"
