--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ egui = "0.31"
 egui_extras = { version = "0.31.1", features = ["svg"] }
 eframe = "0.31.1"
 env_logger = "0.11"
+filesize = { version = "0.2.0", optional = true }
 home = "0.5.11"
 humansize = "2.1.3"
 log = "0.4"
@@ -28,3 +29,7 @@ unicode-normalization = "0.1.24"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
+
+[features]
+default = []
+filesize_crate = ["filesize"]
